[package]
name = "thirtyone-picker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
image = { version = "0.25.8", features = ["gif"]}
log = "0.4.28"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.228"
serde_json = "1.0.145"

